2008-12-10  Thorsten Kukuk  <kukuk@thkukuk.de>

	* doc/man/pam_item_types_ext.inc.xml: Document PAM_AUTHTOK_TYPE.
	* libpam/pam_end.c (pam_end): Free authtok_type.
	* tests/tst-pam_get_item.c: Add PAM_AUTHTOK_TYPE
	as test case.
	* tests/tst-pam_set_item.c: Likewise.
	* libpam/pam_start.c (pam_start): Initialize xdisplay,
	xauth and authtok_type.
	* libpam/pam_get_authtok.c (pam_get_authtok): Rename "type"
	to "authtok_type".
	* modules/pam_cracklib/pam_cracklib.8.xml: Replace "type=" with
	"authtok_type=".
	* doc/man/pam_get_authtok.3.xml: Document authtok_type argument.
	* modules/pam_cracklib/pam_cracklib.c (pam_sm_chauthtok): Set
	type= argument as PAM_AUTHTOK_TYPE item.
	* libpam/pam_get_authtok.c (pam_get_authtok): If no type
	argument given, use PAM_AUTHTOK_TYPE item.
	* libpam/pam_item.c (pam_get_item): Fetch PAM_AUTHTOK_TYPE item.
	(pam_set_item): Store PAM_AUTHTOK_TYPE item.
	* libpam/pam_private.h: Add authtok_type to pam_handle.
	* libpam/include/security/_pam_types.h (PAM_AUTHTOK_TYPE): New.

2008-12-03  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_access/access.conf.5.xml: Replace
	2001:4ca0 with 2001:db8:: [bug#2356400].

	* doc/man/Makefile.am: Add pam_get_authtok.3.xml.
	* doc/man/pam_get_authtok.3.xml: New.
	* libpam/Makefile.am: Add pam_get_authtok.c.
	* libpam/libpam.map: Export pam_get_authtok.
	* libpam/pam_get_authtok.c: New.
	* libpam/pam_private.h: Add mod_argc and mod_argv to pam_handle.
	* libpam_include/security/pam_ext.h: Add pam_get_authtok
	prototype.
	* modules/pam_cracklib/pam_cracklib.c: Use pam_get_authtok.
	* modules/pam_pwhistory/pam_pwhistory.c: Likewise.
	* po/POTFILES.in: Add libpam/pam_get_authtok.c.
	* xtests/tst-pam_cracklib1.c: Adjust error codes.

	* modules/pam_timestamp/Makefile.am: Remove hmactest.c from
	EXTRA_DIST.

	* po/*.po: Regenerated.

2008-12-02  Michael Calmer  <mc@suse.de>

	* modules/pam_limits/limits.conf.5.xml: Document valid values
	for limits (bnc#448314).
